--- a/patients-mvc/src/main/resources/application.properties
+++ b/patients-mvc/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8082
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.security.user.password=amine
+spring.security.user.name=amine
